%% Diagramme de classes — Modèle objet CARIBOOKS
classDiagram
    direction LR

    class EtatUsure {
        +id_etat_usure
        +libelle
    }
    class SourceStock {
        +id_source_stock
        +libelle
        +type_source
    }
    class Livre {
        +id_livre
        +sku
        +titre
        +description
        +image_link
        +prix_chf
        +actif
        +isbn
        +auteur
        +editeur
        +date_publication
        +langue
    }
    class Stock {
        +id_stock
        +quantite_disponible
        +quantite_reservee
    }
    class ScanISBN {
        +id_scan_isbn
        +isbn_lu
        +valide
    }
    class Utilisateur {
        +id_utilisateur
        +email
        +mot_de_passe_hash
        +google_id
        +role
    }
    class Commande {
        +id_commande
        +numero_commande
        +montant_total_chf
        +shipping_method
        +frais_port_chf
        +cart_expires_at
        +statut
    }
    class LigneCommande {
        +id_ligne_commande
        +quantite
        +prix_unitaire_chf
    }
    class Paiement {
        +id_paiement
        +fournisseur_paiement
        +reference_externe
        +montant_chf
        +statut
    }

    Livre "*" --> "1" EtatUsure
    Stock "*" --> "1" Livre
    Stock "*" --> "1" SourceStock
    Commande "*" --> "1" Utilisateur
    LigneCommande "*" --> "1" Commande
    LigneCommande "*" --> "1" Livre
    Paiement "*" --> "1" Commande : plusieurs paiements possibles (retries)
    ScanISBN "*" --> "1" Utilisateur
    ScanISBN "*" --> "1" Livre
